--- a/first.html
+++ b/first.html
@@ -9,6 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <!-- This should be your page ! Pls put here the 3 buttons webpage you built last week !-->
     <p id="redpara">This is red</p>
 </body>
 </html>
