--- a/WEBSITE/Html/About.html
+++ b/WEBSITE/Html/About.html
@@ -7,9 +7,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
+    <style>
+        a:hover {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    <p><a href="Home.html">Home</a> <a href="Contact.html">Contact</a> About</p>
+    <p><a href="Home.html">Home</a> <a href="Contact.html">Contact</a> About <a href="Products.html">Products</a></p>
     <div>
         <p>My favourite dish is Fastfood </p>
         <p>Even is not hleatly</p>
