--- a/WEBSITE/Html/Contact.html
+++ b/WEBSITE/Html/Contact.html
@@ -7,9 +7,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
+    <style>
+        a:hover {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    <p><a href="Home.html">Home</a> Contact <a href="About.html">About</a></p>
+    <p><a href="Home.html">Home</a> Contact <a href="About.html">About</a> <a href="Products.html">Products</a></p>
     <div class="AAA">
         <p>+352 234 564 234</p>
         <img src="../Images/Pic1.jpg" alt="Phone" height="250" width="300">
