--- a/WEBSITE/Html/Home.html
+++ b/WEBSITE/Html/Home.html
@@ -7,9 +7,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
+    <style>
+        a:hover {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-    <p>Home <a href="Contact.html">Contact</a> <a href="About.html"> About</a></p>
+    <p>Home <a href="Contact.html">Contact</a> <a href="About.html"> About</a> <a href="Products.html">Peoduct</a></p>
     <p>This is a normal paragraph</p>
     <div>
         This is a div tag
