--- a/WEBSITE/Html/Home.html
+++ b/WEBSITE/Html/Home.html
@@ -11,7 +11,15 @@
     
 </head>
 <body>
-    <p>Home <a href="Contact.html">Contact</a> <a href="About.html"> About</a> <a href="Products.html">Peoduct</a></p>
+    <nav>
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="About.html"> About</a></li>
+            <li><a href="Products.html">Peoduct</a></li>
+        </ul>
+    </nav>
+
     <p>This is a normal paragraph</p>
     <div>
         This is a div tag
@@ -31,5 +39,9 @@
     <div>
         This is <span id="Yellow">Yellow span tag</span>is inside a div tag
     </div>
+
+    <p id="Haha">llowing structure to emerge according to the needs of the users.[2] There are dozens of different wiki engines in use, both standalone and part of other software, such as bug tracking systems. Some wiki engines are open source, whereas others are proprietary. Some permit control over different functions (levels of access); for example, editing rights may permit changing, adding, or removing material. Others may permit access without enforcing access control. Other rules may be imposed to organize content.
+
+        The online encyclopedia project Wikipedia is the most popular wiki-based w</p>
 </body>
 </html>
