--- a/WEBSITE/Html/About.html
+++ b/WEBSITE/Html/About.html
@@ -14,7 +14,16 @@
     </style>
 </head>
 <body>
-    <p><a href="Home.html">Home</a> <a href="Contact.html">Contact</a> About <a href="Products.html">Products</a></p>
+
+    <nav>
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Products.html">Products</a></li>
+            <li><a href="About.html">About</a></li>
+        </ul>
+    </nav>
+
     <div>
         <p>My favourite dish is Fastfood </p>
         <p>Even is not hleatly</p>
