--- a/WEBSITE/Html/Contact.html
+++ b/WEBSITE/Html/Contact.html
@@ -14,7 +14,16 @@
     </style>
 </head>
 <body>
-    <p><a href="Home.html">Home</a> Contact <a href="About.html">About</a> <a href="Products.html">Products</a></p>
+
+    <nav>
+        <ul>
+           <li><a href="Home.html">Home</a></li>
+           <li><a href="Contact.html">Contact</a></li>
+           <li><a href="About.html">About</a></li>
+           <li><a href="Products.html">Products</a></li> 
+        </ul>
+    </nav>
+    
     <div class="AAA">
         <p>+352 234 564 234</p>
         <img src="../Images/Pic1.jpg" alt="Phone" height="250" width="300">
