--- a/WEBSITE/Html/Products.html
+++ b/WEBSITE/Html/Products.html
@@ -17,7 +17,16 @@
     </style>
 </head>
 <body>
-    <p><a href="Home.html">Home</a> <a href="Contact.html">Contact</a> <a href="About.html">About</a> Products</p>
+
+    <nav>
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Products.html">Products</a></li>
+        </ul>
+    </nav>
+    
     <div id="oo">
         <p>That you need to buy for this week</p>
         <ol>
