--- a/WEBSITE/Html/Contact.html
+++ b/WEBSITE/Html/Contact.html
@@ -7,31 +7,23 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
-    <style>
-        a:hover {
-            background-color: yellow;
-        }
-    </style>
+
 </head>
 <body>
 
-    <nav>
-        <ul>
-           <li><a href="Home.html">Home</a></li>
-           <li><a href="Contact.html">Contact</a></li>
-           <li><a href="About.html">About</a></li>
-           <li><a href="Products.html">Products</a></li> 
-        </ul>
-    </nav>
+    <div class="content nav">
+        <div class="header">
+            <h1>FLY</h1>
+            <nav>
+                <ul>
+                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Products.html">Products</a></li> 
+                </ul>
+            </nav>
+        </div>
+    </div>
     
-    <div class="AAA">
-        <p>+352 234 564 234</p>
-        <img src="../Images/Pic1.jpg" alt="Phone" height="250" width="300">
-    </div>
-
-    <div class="AAA">
-        <p>li-sh447@school.lu</p>
-        <img src="../Images/Pic2.jpg" alt="Imail" height="250" width="300">
-    </div>
 </body>
 </html>
