--- a/WEBSITE/Html/About.html
+++ b/WEBSITE/Html/About.html
@@ -7,22 +7,25 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
-    <style>
-        a:hover {
-            background-color: yellow;
-        }
-    </style>
 </head>
+
 <body>
 
-    <nav>
+    <div class="header">
+        <h1>SPL</h1>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact</a></li>
+            <li><a href="About.html"> About</a></li>
             <li><a href="Products.html">Products</a></li>
-            <li><a href="About.html">About</a></li>
+            <li class="dropdown">
+                <a href="English.html">English</a>
+                        <div class="dropdown-content">
+                            <a href="Chinese.html">Chinese</a>
+                        </div>
+            </li>
         </ul>
-    </nav>
+    </div>
 
     <div>
         <p>My favourite dish is Fastfood </p>
