--- a/WEBSITE/Html/Contact.html
+++ b/WEBSITE/Html/Contact.html
@@ -11,19 +11,21 @@
 </head>
 <body>
 
-    <div class="content nav">
-        <div class="header">
-            <h1>FLY</h1>
-            <nav>
-                <ul>
-                    <li><a href="Home.html">Home</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
-                    <li><a href="About.html">About</a></li>
-                    <li><a href="Products.html">Products</a></li> 
-                </ul>
-            </nav>
-        </div>
+    <div class="header">
+        <h1>SPL</h1>
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="About.html"> About</a></li>
+            <li><a href="Products.html">Products</a></li>
+            <li class="dropdown">
+                <a href="English.html">English</a>
+                        <div class="dropdown-content">
+                            <a href="Chinese.html">Chinese</a>
+                        </div>
+            </li>
+        </ul>
     </div>
-    
+
 </body>
 </html>
