--- a/WEBSITE/Html/Home.html
+++ b/WEBSITE/Html/Home.html
@@ -12,17 +12,21 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <nav>
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="About.html"> About</a></li>
-                <li><a href="Products.html">Products</a></li>
-            </ul>
-        </nav>
+    <div class="header">
+        <h1>SPL</h1>
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="About.html"> About</a></li>
+            <li><a href="Products.html">Products</a></li>
+            <li class="dropdown">
+                <a href="English.html">English</a>
+                        <div class="dropdown-content">
+                            <a href="Chinese.html">Chinese</a>
+                        </div>
+            </li>
+        </ul>
     </div>
-
 
     <p id="Haha">llowing structure to emerge according to the needs of the users.[2] There are dozens of different wiki engines in use, both standalone and part of other software, such as bug tracking systems. Some wiki engines are open source, whereas others are proprietary. Some permit control over different functions (levels of access); for example, editing rights may permit changing, adding, or removing material. Others may permit access without enforcing access control. Other rules may be imposed to organize content.
 
