--- a/WEBSITE/Html/Products.html
+++ b/WEBSITE/Html/Products.html
@@ -5,47 +5,27 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
-    <style>
-        li:nth-child(even) {
-            background-color: aqua;
-        }
-        a:hover{
-            background-color: yellow;
-        }
-    </style>
 </head>
+
 <body>
 
-    <nav>
+    <div class="header">
+        <h1>SPL</h1>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Contact.html">Contact</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a href="About.html"> About</a></li>
             <li><a href="Products.html">Products</a></li>
+            <li class="dropdown">
+                <a href="English.html">English</a>
+                        <div class="dropdown-content">
+                            <a href="Chinese.html">Chinese</a>
+                        </div>
+            </li>
         </ul>
-    </nav>
+    </div>
     
-    <div id="oo">
-        <p>That you need to buy for this week</p>
-        <ol>
-            <li>Milk</li>
-            <li>Hambuerger</li>
-            <li>Hams</li>
-            <li>Chips</li>
-        </ol>
-    </div>
-
-    <div>
-        <p>After quarantaine time i wanna to go</p>
-        <ul>
-            <li>Mcdo</li>
-            <li>Kebab</li>
-            <li>Quick</li>
-            <li>BuergKing</li>
-            <li>Play BasketBall</li>
-        </ul>
-    </div>
 </body>
 </html>
