--- a/WEBSITE/Html/Contact.html
+++ b/WEBSITE/Html/Contact.html
@@ -19,10 +19,10 @@
             <li><a href="About.html"> About</a></li>
             <li><a href="Products.html">Products</a></li>
             <li class="dropdown">
-                <a href="English.html">English</a>
-                        <div class="dropdown-content">
-                            <a href="Chinese.html">Chinese</a>
-                        </div>
+                <a href="ContactC.html">联系</a>
+                    <!-- <div class="dropdown-content">
+                        <a href="Chinese.html">Chinese</a>
+                    </div>  -->
             </li>
         </ul>
     </div>
