--- a/WEBSITE/Html/HomeC.html
+++ b/WEBSITE/Html/HomeC.html
@@ -3,38 +3,26 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>首页</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
     <script src='main.js'></script>
 </head>
-
 <body>
-
     <div class="header">
         <h1>SPL</h1>
         <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="About.html"> About</a></li>
-            <li><a href="Products.html">Products</a></li>
+            <li><a href="HomeC.html">首页</a></li>
+            <li><a href="ContactC.html">联系</a></li>
+            <li><a href="AboutC.html"> 关于</a></li>
+            <li><a href="ProductsC.html">产品</a></li>
             <li class="dropdown">
-                <a href="AboutC.html">关于</a>
+                <a href="Home.html">Home</a>
                     <!-- <div class="dropdown-content">
                         <a href="Chinese.html">Chinese</a>
-                    </div>  -->
+                    </div> -->
             </li>
         </ul>
-    </div>
-
-    <div>
-        <p>My favourite dish is Fastfood </p>
-        <p>Even is not hleatly</p>
-        <p>ActuallyI dont know why i like it</p>
-    </div>
-
-    <div id="ABB">
-        <img src="../Images/Pic3.jpg" alt="Fastfood" height="250" width="300">
     </div>
 </body>
 </html>
