--- a/WEBSITE/Html/Home.html
+++ b/WEBSITE/Html/Home.html
@@ -20,10 +20,10 @@
             <li><a href="About.html"> About</a></li>
             <li><a href="Products.html">Products</a></li>
             <li class="dropdown">
-                <a href="English.html">English</a>
-                        <div class="dropdown-content">
-                            <a href="Chinese.html">Chinese</a>
-                        </div>
+                <a href="HomeC.html">首页</a>
+                    <!-- <div class="dropdown-content">
+                        <a href="Chinese.html">Chinese</a>
+                    </div> -->
             </li>
         </ul>
     </div>
