--- a/WEBSITE/Html/Home.html
+++ b/WEBSITE/Html/Home.html
@@ -11,25 +11,34 @@
     
 </head>
 <body>
-
-    <div class="header">
-        <h1>SPL</h1>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="About.html"> About</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li class="dropdown">
-                <a href="HomeC.html">首页</a>
+    <div>
+        <div class="header">
+            <h1>SPL</h1>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="About.html"> About</a></li>
+                <li><a href="Products.html">Products</a></li>
+                <li class="dropdown">
+                    <a href="HomeC.html">首页</a>
                     <!-- <div class="dropdown-content">
                         <a href="Chinese.html">Chinese</a>
                     </div> -->
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
+        <p class="titles">
+            What is Lorem Ipsum?
+        </p>
+        <p class="sentences">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p class="titles">
+            Why do we use it?
+        </p>
+        <p class="sentences">
+            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+        </p>
     </div>
-
-    <p id="Haha">llowing structure to emerge according to the needs of the users.[2] There are dozens of different wiki engines in use, both standalone and part of other software, such as bug tracking systems. Some wiki engines are open source, whereas others are proprietary. Some permit control over different functions (levels of access); for example, editing rights may permit changing, adding, or removing material. Others may permit access without enforcing access control. Other rules may be imposed to organize content.
-
-        The online encyclopedia project Wikipedia is the most popular wiki-based w</p>
 </body>
 </html>
