--- a/WEBSITE/Html/About.html
+++ b/WEBSITE/Html/About.html
@@ -11,30 +11,36 @@
 
 <body>
 
-    <div class="header">
-        <h1>SPL</h1>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="About.html"> About</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li class="dropdown">
-                <a href="AboutC.html">关于</a>
-                    <!-- <div class="dropdown-content">
-                        <a href="Chinese.html">Chinese</a>
-                    </div>  -->
-            </li>
-        </ul>
+    <div id="aboutpage">
+        
+        <div class="header">
+            <h1>SPL</h1>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="About.html"> About</a></li>
+                <li><a href="Products.html">Products</a></li>
+                <li class="dropdown">
+                    <a href="AboutC.html">关于</a>
+                        <!-- <div class="dropdown-content">
+                            <a href="Chinese.html">Chinese</a>
+                        </div>  -->
+                </li>
+            </ul>
+        </div>
+        <div id="aboutus">
+            <div class="container">
+                <div class="aboutme">
+                    <h2>Mr John</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
+                <div class="aboutmepic">
+                    <img src="../Images/About/1.jpg" alt="Mr John">
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <p>My favourite dish is Fastfood </p>
-        <p>Even is not hleatly</p>
-        <p>ActuallyI dont know why i like it</p>
-    </div>
-
-    <div id="ABB">
-        <img src="../Images/Pic3.jpg" alt="Fastfood" height="250" width="300">
-    </div>
 </body>
 </html>
