--- a/WEBSITE/Html/Contact.html
+++ b/WEBSITE/Html/Contact.html
@@ -10,22 +10,24 @@
 
 </head>
 <body>
-
-    <div class="header">
-        <h1>SPL</h1>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="About.html"> About</a></li>
-            <li><a href="Products.html">Products</a></li>
-            <li class="dropdown">
-                <a href="ContactC.html">联系</a>
+    <div id="conctacpage">
+        
+        <div class="header">
+            <h1>SPL</h1>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="About.html"> About</a></li>
+                <li><a href="Products.html">Products</a></li>
+                <li class="dropdown">
+                    <a href="ContactC.html">联系</a>
                     <!-- <div class="dropdown-content">
                         <a href="Chinese.html">Chinese</a>
                     </div>  -->
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
+       
     </div>
-
 </body>
 </html>
