--- a/WEBSITE/Html/ChineseVersion/ContactC.html
+++ b/WEBSITE/Html/ChineseVersion/ContactC.html
@@ -3,26 +3,38 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>联系</title>
+    <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../../Stlying/ChineseVersion/ContactCHN.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <div class="header">
-        <h1>SPL</h1>
-        <ul>
-            <li><a href="HomeC.html">首页</a></li>
-            <li><a href="ContactC.html">联系</a></li>
-            <li><a href="AboutC.html"> 关于</a></li>
-            <li><a href="ProductsC.html">产品</a></li>
-            <li class="dropdown">
-                <a href="Contact.html">Contact</a>
-                    <!-- <div class="dropdown-content">
-                        <a href="Chinese.html">Chinese</a>
-                    </div> -->
-            </li>
-        </ul>
+    <div class="box-area">
+        <header>
+            <div class="wrapper">
+                <div class="logo">
+                    <h1>SPL</h1>
+                </div>
+                <nav>
+                    <a href="./HomeC.html">首页</a>
+                    <a href="./ContactC.html">联系</a>
+                    <a href="./ProductsC.html">产品</a>
+                    <a href="./AboutC.html">关于</a>
+                </nav>
+                <div>
+                    <a href="../EnglishVersion/Contact.html">Contact</a>
+                </div>
+            </div>
+        </header>
+        <div class="banner-area">
+            <h2>Pandora Box</h2>
+        </div>
+        <div class="content-area1">
+            <div>
+                <h2>联系我们</h2>
+                <p>Lorem Ipsum，也称乱数假文或者哑元文本， 是印刷及排版领域所常用的虚拟文字。由于曾经一台匿名的打印机刻意打乱了一盒印刷字体从而造出一本字体样品书，Lorem Ipsum从西元15世纪起就被作为此领域的标准文本使用。它不仅延续了五个世纪，还通过了电子排版的挑战，其雏形却依然保存至今。在1960年代，”Leatraset”公司发布了印刷着Lorem Ipsum段落的纸张，从而广泛普及了它的使用。最近，计算机桌面出版软件”Aldus PageMaker”也通过同样的方式使Lorem Ipsum落入大众的视野。</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
