--- a/WEBSITE/Html/EnglishVersion/Home.html
+++ b/WEBSITE/Html/EnglishVersion/Home.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../../Stlying/EnglishVersion/HomeEn.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../../Stlying/EnglishVersion/HomeEN.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -22,7 +22,7 @@
                     <a href="./About.html">About</a>
                 </nav>
                 <div>
-                    <a href="#">首页</a>
+                    <a href="../ChineseVersion/HomeC.html">首页</a>
                 </div>
             </div>
         </header>
