--- a/WEBSITE/Html/ChineseVersion/HomeC.html
+++ b/WEBSITE/Html/ChineseVersion/HomeC.html
@@ -3,40 +3,38 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>首页</title>
+    <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../Stlying/Mystlying.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../../Stlying/ChineseVersion/HomeCHN.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <div>
-        <div class="header">
-            <h1>SPL</h1>
-            <ul>
-                <li><a href="HomeC.html">首页</a></li>
-                <li><a href="ContactC.html">联系</a></li>
-                <li><a href="AboutC.html"> 关于</a></li>
-                <li><a href="ProductsC.html">产品</a></li>
-                <li class="dropdown">
-                    <a href="Home.html">Home</a>
-                    <!-- <div class="dropdown-content">
-                        <a href="Chinese.html">Chinese</a>
-                    </div> -->
-                </li>
-            </ul>
+    <div class="box-area">
+        <header>
+            <div class="wrapper">
+                <div class="logo">
+                    <h1>SPL</h1>
+                </div>
+                <nav>
+                    <a href="./HomeC.html">首页</a>
+                    <a href="./ContactC.html">联系</a>
+                    <a href="./ProductsC.html">产品</a>
+                    <a href="./AboutC.html">关于</a>
+                </nav>
+                <div>
+                    <a href="../EnglishVersion/Home.html">Home</a>
+                </div>
+            </div>
+        </header>
+        <div class="banner-area">
+            <h2>Pandora Box</h2>
         </div>
-        <p class="titles">
-            什么是Lorem Ipsum?
-        </p>
-        <p class="sentences">
-            Lorem Ipsum，也称乱数假文或者哑元文本， 是印刷及排版领域所常用的虚拟文字。由于曾经一台匿名的打印机刻意打乱了一盒印刷字体从而造出一本字体样品书，Lorem Ipsum从西元15世纪起就被作为此领域的标准文本使用。它不仅延续了五个世纪，还通过了电子排版的挑战，其雏形却依然保存至今。在1960年代，”Leatraset”公司发布了印刷着Lorem Ipsum段落的纸张，从而广泛普及了它的使用。最近，计算机桌面出版软件”Aldus PageMaker”也通过同样的方式使Lorem Ipsum落入大众的视野。
-        </p>
-        <p class="titles">
-            我们为何用它？
-        </p>
-        <p class="sentences">
-            无可否认，当读者在浏览一个页面的排版时，难免会被可阅读的内容所分散注意力。Lorem Ipsum的目的就是为了保持字母多多少少标准及平均的分配，而不是“此处有文本，此处有文本”，从而让内容更像可读的英语。如今，很多桌面排版软件以及网页编辑用Lorem Ipsum作为默认的示范文本，搜一搜“Lorem Ipsum”就能找到这些网站的雏形。这些年来Lorem Ipsum演变出了各式各样的版本，有些出于偶然，有些则是故意的（刻意的幽默之类的）。
-        </p>
+        <div class="content-area0">
+            <div>
+                <h2>欢迎来到Pandora Box</h2>
+                <p>Lorem Ipsum，也称乱数假文或者哑元文本， 是印刷及排版领域所常用的虚拟文字。由于曾经一台匿名的打印机刻意打乱了一盒印刷字体从而造出一本字体样品书，Lorem Ipsum从西元15世纪起就被作为此领域的标准文本使用。它不仅延续了五个世纪，还通过了电子排版的挑战，其雏形却依然保存至今。在1960年代，”Leatraset”公司发布了印刷着Lorem Ipsum段落的纸张，从而广泛普及了它的使用。最近，计算机桌面出版软件”Aldus PageMaker”也通过同样的方式使Lorem Ipsum落入大众的视野。</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
