--- a/WEBSITE/Html/ChineseVersion/ProductsC.html
+++ b/WEBSITE/Html/ChineseVersion/ProductsC.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../../Stlying/ChineseVersion/ChineseVersion.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../../Stlying/EnglishVersion/EnglishVersion.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -18,18 +18,21 @@
                 <nav>
                     <a href="./HomeC.html">首页</a>
                     <a href="./ContactC.html">联系</a>
-                    <a href="./ProductsC.html">产品</a>
+                    <a class="active" href="./ProductsC.html">产品</a>
                     <a href="./AboutC.html">关于</a>
                 </nav>
-                <div>
-                    <a href="../EnglishVersion/Products.html">Products</a>
+                <div class="dropdown">
+                    <a href="../ChineseVersion/ProductsC.html">中文</a>
+                    <div class="dropdown-content">
+                        <a href="../EnglishVersion/Products.html">English</a>
+                    </div>
                 </div>
             </div>
         </header>
         <div class="banner-area">
             <h2>Pandora Box</h2>
         </div>
-        <div class="content-area-in-products">
+        <div class="content-area">
             <div>
                 <h2>我们的产品</h2>
                 <p>Lorem Ipsum，也称乱数假文或者哑元文本， 是印刷及排版领域所常用的虚拟文字。由于曾经一台匿名的打印机刻意打乱了一盒印刷字体从而造出一本字体样品书，Lorem Ipsum从西元15世纪起就被作为此领域的标准文本使用。它不仅延续了五个世纪，还通过了电子排版的挑战，其雏形却依然保存至今。在1960年代，”Leatraset”公司发布了印刷着Lorem Ipsum段落的纸张，从而广泛普及了它的使用。最近，计算机桌面出版软件”Aldus PageMaker”也通过同样的方式使Lorem Ipsum落入大众的视野。</p>
@@ -43,6 +46,26 @@
                 <div class="Products">
                     <img src="../../Images/Products/product2.jpg" alt="萝卜青菜烩饭">
                     <p>萝卜青菜烩饭</p>
+                    <p>40$</p>
+                </div>
+                <div class="Products">
+                    <img src="../../Images/Products/product3.jpg" alt="意大利面，蛤，藏红花和甘草">
+                    <p>意大利面，蛤，藏红花和甘草</p>
+                    <p>40$</p>
+                </div>
+                <div class="Products">
+                    <img src="../../Images/Products/product3.jpg" alt="意大利面，蛤，藏红花和甘草">
+                    <p>意大利面，蛤，藏红花和甘草</p>
+                    <p>40$</p>
+                </div>
+                <div class="Products">
+                    <img src="../../Images/Products/product3.jpg" alt="意大利面，蛤，藏红花和甘草">
+                    <p>意大利面，蛤，藏红花和甘草</p>
+                    <p>40$</p>
+                </div>
+                <div class="Products">
+                    <img src="../../Images/Products/product3.jpg" alt="意大利面，蛤，藏红花和甘草">
+                    <p>意大利面，蛤，藏红花和甘草</p>
                     <p>40$</p>
                 </div>
                 <div class="Products">
