--- a/WEBSITE/Html/EnglishVersion/Home.html
+++ b/WEBSITE/Html/EnglishVersion/Home.html
@@ -16,20 +16,23 @@
                     <h1>SPL</h1>
                 </div>
                 <nav>
-                    <a href="./Home.html">Home</a>
+                    <a class="active" href="./Home.html">Home</a>
                     <a href="./Contact.html">Contact</a>
                     <a href="./Products.html">Products</a>
                     <a href="./About.html">About</a>
                 </nav>
-                <div>
-                    <a href="../ChineseVersion/HomeC.html">首页</a>
+                <div class="dropdown">
+                    <a href="../EnglishVersion/Home.html">English</a>
+                    <div class="dropdown-content">
+                        <a href="../ChineseVersion/HomeC.html">中文</a>
+                    </div>
                 </div>
             </div>
         </header>
         <div class="banner-area">
             <h2>Pandora Box</h2>
         </div>
-        <div class="content-area-in-home">
+        <div class="content-area">
             <div>
                 <h2>Welcome to the Pandora Box</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
